# c-simple-json

./: .gitignore  CMakeLists.txt  main.c
include/: lexer.h  span.h  test.h  token.h
include/private/: span_utils.h
include/private/utils/: string_reader.h
include/public/: token.h
src/: lexer.c  test.c
src/utils/: span_utils.c  stringReader.c  string_reader.c
